source/MoorDyn2.h

/** @defgroup new_c_api The C API
 *  @{
 */

/// A mooring system instance
typedef struct __MoorDyn* MoorDyn;
/** @brief Creates a MoorDyn instance
 *
 * At the time of creating a new MoorDyn instance, the input file is read
 * and all the objects and structures are created. You must call afterwards
 * MoorDyn_Init() to compute the initial conditions
 *
 * @param infilename The input file, if either NULL or "", then
 * "Mooring/lines.txt" will be considered
 * @return The mooring instance, NULL if errors happened
 */
MoorDyn DECLDIR
MoorDyn_Create(const char* infilename);
/** @brief Get the number of coupled Degrees Of Freedom (DOFs)
 *
 * The number of components for some parameters in MoorDyn_Init() and
 * MoorDyn_Step() can be known using this function
 * @return MOORDYN_INVALID_VALUE if @p system is NULL, MOORDYN_SUCESS
 * otherwise
 */
int DECLDIR
MoorDyn_NCoupledDOF(MoorDyn system, unsigned int* n);
/** @brief Set the instance verbosity level
 * @param system The Moordyn system
 * @param verbosity The verbosity level. It can take the following values
 *  - MOORDYN_DBG_LEVEL Every single message will be printed
 *  - MOORDYN_MSG_LEVEL Messages specially designed to help debugging the
 * code will be omitted
 *  - MOORDYN_WRN_LEVEL Just errors and warnings will be reported
 *  - MOORDYN_ERR_LEVEL Just errors will be reported
 *  - MOORDYN_NO_OUTPUT No info will be reported
 * @return MOORDYN_SUCESS If the verbosity level is correctly set, an error
 * code otherwise (see @ref moordyn_errors)
 */
int DECLDIR
MoorDyn_SetVerbosity(MoorDyn system, int verbosity);
/** @brief Set the instance log file
 * @param system The Moordyn system
 * @param log_path The file path to print the log file
 * @return MOORDYN_SUCESS If the log file is correctly set, an error code
 * otherwise (see @ref moordyn_errors)
 */
int DECLDIR
MoorDyn_SetLogFile(MoorDyn system, const char* log_path);
/** @brief Set the instance log file printing level
 * @param system The Moordyn system
 * @param verbosity The log file print level. It can take the following
 * values
 *  - MOORDYN_DBG_LEVEL Every single message will be printed
 *  - MOORDYN_MSG_LEVEL Messages specially designed to help debugging the
 * code will be omitted
 *  - MOORDYN_WRN_LEVEL Just errors and warnings will be reported
 *  - MOORDYN_ERR_LEVEL Just errors will be reported
 *  - MOORDYN_NO_OUTPUT No info will be reported
 * @return MOORDYN_SUCESS If the printing level is correctly set, an error
 * code otherwise (see @ref moordyn_errors)
 */
int DECLDIR
MoorDyn_SetLogLevel(MoorDyn system, int verbosity);
/** @brief Log a message
 * @param system The Moordyn system
 * @param level The message level. It can take the following values
 *  - MOORDYN_DBG_LEVEL for debugging messages
 *  - MOORDYN_MSG_LEVEL for regular information messages
 *  - MOORDYN_WRN_LEVEL for warnings
 *  - MOORDYN_ERR_LEVEL for errors
 * @param msg The message to log
 * @return MOORDYN_SUCESS If the printing level is correctly set, an error
 * code otherwise (see @ref moordyn_errors)
 * @note This messages are subjected to the same rules than the inner
 * messages, i.e. if @p level is lower than the threshold levels set with
 * MoorDyn_SetVerbosity() and MoorDyn_SetLogLevel(), the message will not be
 * logged in the terminal and the log file respectively
 * @note This function will not log the file, line and function where it is
 * called from, not even in case of warnings or errors
 */
int DECLDIR
MoorDyn_Log(MoorDyn system, int level, const char* msg);
/** @brief Compute the initial condition of a MoorDyn system
 *
 * At the time of creating a new MoorDyn instance, the input file is read
 * and all the objects and structures are created. You must call afterwards
 * MoorDyn_Init() to compute the initial conditions
 *
 * @param system The Moordyn system
 * @param x Position vector (6 components per coupled body or cantilevered
 * rod and 3 components per pinned rod or coupled point)
 * @param xd Velocity vector (6 components per coupled body or cantilevered
 * rod and 3 components per pinned rod or coupled point)
 * @return MOORDYN_SUCESS If the mooring system is correctly initialized,
 * an error code otherwise (see @ref moordyn_errors)
 * @note MoorDyn_NCoupledDOF() can be used to know the number of components
 * required for \p x and \p xd
 */
int DECLDIR
MoorDyn_Init(MoorDyn system, const double* x, const double* xd);
/** @brief Runs a time step of the MoorDyn system
 * @param system The Moordyn system
 * @param x Position vector
 * @param xd Velocity vector
 * @param f Output forces
 * @param t Simulation time
 * @param dt Time step
 * @return MOORDYN_SUCESS if the mooring system has correctly evolved, an
 * error code otherwise (see @ref moordyn_errors)
 * @note MoorDyn_NCoupledDOF() can be used to know the number of components
 * required for \p x, \p xd and \p f
 */
int DECLDIR
MoorDyn_Step(MoorDyn system,
             const double* x,
             const double* xd,
             double* f,
             double* t,
             double* dt);
/** @brief Releases MoorDyn allocated resources
 * @param system The Moordyn system
 * @return MOORDYN_SUCESS If the mooring system is correctly destroyed, an
 * error code otherwise (see @ref moordyn_errors)
 */
int DECLDIR
MoorDyn_Close(MoorDyn system);